kubernetes/clusters/cluster-1-cloud-oci/deployments/istio/ingress/gateways/passthru-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-passthrough-gateway
  namespace: istio-ingress
spec:
  selector:
    app: istio-gateway
  servers:
    - port:
        number: 636
        name: ldaps
        protocol: TCP
      hosts:
        - "glauth.${DOMAIN_1}"
