kubernetes/clusters/cluster-1-cloud-oci/deployments/istio/ingress/gateways/public-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-public-gateway
  namespace: istio-ingress
spec:
  selector:
    app: istio-pub-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*.${DOMAIN_4}'
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - '${DOMAIN_4}'
        - '*.${DOMAIN_4}'
        - istio-pub-gateway.istio-ingress.svc.cluster.local
        - istio-pub-gateway.istio-ingress.svc
        - istio-pub-gateway.istio-ingress
      tls:
        credentialName: istio-public-cert-tls
        mode: SIMPLE
        minProtocolVersion: TLSV1_2
        maxProtocolVersion: TLSV1_3
